# workshop_agentic_coding

./: CLAUDE.md  LICENSE  README.md  WORKSHOP.md  agent_metrics.csv  analysis.ipynb  listClasses.txt  overview.html  paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  parse_logs.py  pyproject.toml  test_parse_logs.py  workflow_metrics.csv
agentic/abstractundoableedit/run_1/abstractundoableedit/: AbstractUndoableEdit.mmd  AbstractUndoableEditRefinements.java
agentic/abstractundoableedit/run_1/logs/: workflow_20260310_174230.json
agentic/abstractundoableedit/run_2/abstractundoableedit/: AbstractUndoableEdit.json  AbstractUndoableEdit.mmd  AbstractUndoableEditRefinements.java
agentic/abstractundoableedit/run_2/logs/: workflow_20260310_174230.json
agentic/abstractundoableedit/run_3/abstractundoableedit/: AbstractUndoableEdit.mmd  AbstractUndoableEditRefinements.java
agentic/abstractundoableedit/run_3/logs/: workflow_20260310_174826.json
agentic/abstractundoableedit/run_4/abstractundoableedit/: AbstractUndoableEdit.mmd  AbstractUndoableEditRefinements.java
agentic/abstractundoableedit/run_4/logs/: workflow_20260310_175245.json
agentic/abstractundoableedit/run_5/abstractundoableedit/: AbstractUndoableEdit.mmd  AbstractUndoableEditRefinements.java
agentic/abstractundoableedit/run_5/logs/: workflow_20260310_175723.json
agentic/bufferedinputstream/run_1/bufferedinputstream/: BufferedInputStream.mmd  BufferedInputStreamRefinements.java
manual/complexity/: complexity_review_final.csv  complexity_rubric.md
(+490 files in other folders)
