[project]
name = "barista-results"
version = "0.1.0"
description = "Evaluation scripts and plots for Barista typestate synthesis results"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.8",
    "nbconvert>=7.17.0",
    "pandas>=2.3.3",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
